[package]
name = "raytracer22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
image = "0.24.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4", features = ["std", "serde"] }
threadpool = "1.8.1"
indicatif = "0.17.1"
